--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.1.1",
     "axios": "^0.19.0",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.4.3",
-    "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
-    "postcss-px2rem": "^0.3.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
     "swiper": "^5.2.1",
     "vee-validate": "2.2.15",
     "vue": "^2.6.10",
@@ -28,6 +26,10 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -40,8 +42,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": 0,
-      "no-unused-vars" : 0
+      "no-console": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
