--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "@vue/cli": "^4.1.1",
     "axios": "^0.19.0",
     "babel-plugin-component": "^1.1.1",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.4.3",
     "mint-ui": "^2.2.13",
+    "mockjs": "^1.1.0",
     "swiper": "^5.2.1",
     "vee-validate": "2.2.15",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -30,6 +34,7 @@
     "postcss-px2rem": "^0.3.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -42,7 +47,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": 0
+      "no-console": 0,
+      "no-unused-vars": 0
     },
     "parserOptions": {
       "parser": "babel-eslint"
