--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     ],
     "rules": {
       "no-console": 0,
-      "no-unused-vars": 0
+      "no-unused-vars": 0,
+      "vue/no-side-effects-in-computed-properties":0
     },
     "parserOptions": {
       "parser": "babel-eslint"
